Add category and tags in posts

--- a/_posts/2015-09-06-merapi-nt-1.md
+++ b/_posts/2015-09-06-merapi-nt-1.md
@@ -5,6 +5,8 @@ subtitle:   "Exploring the Mount Merapi National Park trails. In this post, I'm 
 date:       2015-09-06 06:16:00
 author:     "wiseodd"
 header-img: "img/2015-09-06-merapi-nt-1/bg.jpg"
+category:   travel
+tags:       [indonesia, hiking]
 ---
 
 Here's the thing. I've been in Yogyakarta since 1994, so that means it's already 21 years. I've been to Kaliurang and Merapi's slope countless of time (well, I mean I've since lost the counter). But this is new! I don't know that Merapi has a national park open for public! I just knew that Merapi NT is just for serious mountain climbers.
