--- a/_posts/2015-09-12-merapi-nt-2.md
+++ b/_posts/2015-09-12-merapi-nt-2.md
@@ -5,6 +5,8 @@ subtitle:   "Exploring the western part of Mt. Merapi National Park. Will it be 
 date:       2015-09-12 05:40:00
 author:     "wiseodd"
 header-img: "img/2015-09-12-merapi-nt-2/bg.jpg"
+category:   travel
+tags:       [indonesia, hiking]
 ---
 
 Today, I went to Mt. Merapi National Park again. As I said before, the national park has two entrances, on the east, from Tlogo Putri, where Pronojiwo Hill is, and on the west, from Tlogo Nirmolo, where Japanese Bunker and Plawangan Hill are. Again, as is the case of Pronojiwo's case, don't ask me what Plawangan means.
