--- a/_posts/2015-09-13-books.md
+++ b/_posts/2015-09-13-books.md
@@ -5,6 +5,7 @@ subtitle:   "What an astonishing thing a book is. A book is proof that humans ar
 date:       2015-09-13 03:44:00
 author:     "wiseodd"
 header-img: "img/2015-09-13-books/bg.jpg"
+category:   musing
 ---
 
 If the internet was to be believed, then Indonesia is in the sad state. Indonesians read on average, one book every year. For comparison, the median of book read by Americans per year is 6. Already, they've won by 600% margin.
@@ -29,7 +30,7 @@ On middle school, my family's financial condition was improving. Now, every mont
 
 <h2 class="section-header">Dark Age</h2>
 
-Like those great civilization on earth, there were high and low points. I reached my low point when I was at high school. While my earlier life was a massive growth in term of reading habit, it plateaued at high school. It was my Dark Age. 
+Like those great civilization on earth, there were high and low points. I reached my low point when I was at high school. While my earlier life was a massive growth in term of reading habit, it plateaued at high school. It was my Dark Age.
 
 It's really frustrating to think about it now. My bookshop culture abruptly ended at that time, and with that, my reading habit. Over the course of around three years, I only managed to read a handful of books.
 
@@ -37,13 +38,13 @@ Now that I think about it, the problem was that I tried too hard to fit in with 
 
 <h2 class="section-header">Renaissance</h2>
 
-Right before I graduated from high school, my good friend lent a book to me. It was Paulo Coelho's The Alchemist. That book was amazing. It taught me a lot of life lessons, the first book to do so, it made a Coelho's fan, and more importantly, it rekindled my reading appetite. 
+Right before I graduated from high school, my good friend lent a book to me. It was Paulo Coelho's The Alchemist. That book was amazing. It taught me a lot of life lessons, the first book to do so, it made a Coelho's fan, and more importantly, it rekindled my reading appetite.
 
-I read a lot of Coelho's books at the early years of college. 
+I read a lot of Coelho's books at the early years of college.
 
 My latest and greatest turning point happened in December, 2011. I bought an Amazon Kindle. My family was still ravaged by the death of my father, but I managed to scrape every little bit of money to buy that Kindle, which cost me a lot, about $140 in total. I've never once thought of that buy as a waste of money. It was the best buy I've ever done. That device played a pivotal role on my reading renaissance.
 
-Now with a Kindle, I suddenly could read any book, any book at all, that's available on the internet. That was when I started to read English language books. Although I've completed an English book, on pdf, a month prior to that Kindle purchase, if I didn't buy that Kindle, I don't think I could continue reading English books. Reading books on your computer screen just sucks. 
+Now with a Kindle, I suddenly could read any book, any book at all, that's available on the internet. That was when I started to read English language books. Although I've completed an English book, on pdf, a month prior to that Kindle purchase, if I didn't buy that Kindle, I don't think I could continue reading English books. Reading books on your computer screen just sucks.
 
 The first English language book I've ever read was Bartimaeus and the Amulet of Samarkand. Oh boy, was it a great read. Reading in English really give me those authenticity feel. Suddenly I understand more what the writer were saying. It had nothing to do with my English skill. In fact, my reading comprehension in English back then was just plain awful. It was really hard to comprehend what the book said, especially at the start of the book, up until some early chapters.
 
