--- a/_posts/2016-01-01-2015-year-review.md
+++ b/_posts/2016-01-01-2015-year-review.md
@@ -5,6 +5,7 @@ subtitle:   "Review for my life in the year of 2015"
 date:       2016-01-01 04:06:00
 author:     "wiseodd"
 header-img: "img/2016-01-01-2015-year-review/bg.jpg"
+category:   musing
 ---
 
 So, 2015 has been completed. I'd really like to write this post to review my goals I've set in the beginning of the year, and what I've achieved during that.
@@ -78,7 +79,7 @@ In 2014, I was bitten by travel bug. Since then, I suffer a serious case of wand
 
 Hence, at the start of 2015, I set a goal to travel to at least 4 countries. I knew I could do that.
 
-Things were good in the first few months of 2015. I traveled Taiwan in April. But then, I changed my plan. I didn't travel anymore for the rest of the year and saved every little bit of money I got from my job. Why? Because I want to quit my 9-to-5 job earlier than I originally planned at the start of the year. Now? As of December 31st, I've quit my job. 
+Things were good in the first few months of 2015. I traveled Taiwan in April. But then, I changed my plan. I didn't travel anymore for the rest of the year and saved every little bit of money I got from my job. Why? Because I want to quit my 9-to-5 job earlier than I originally planned at the start of the year. Now? As of December 31st, I've quit my job.
 
 Obviously I failed in this goal. But I'm not disappointed. It's a necessary sacrifice for me to achive my dream in 2016: be a nomad and travel the world.
 
