--- a/_posts/2016-02-14-penang.md
+++ b/_posts/2016-02-14-penang.md
@@ -5,6 +5,8 @@ subtitle:   "My two weeks experience nomading in the state of Penang, Malaysia"
 date:       2016-02-14 05:00
 author:     "wiseodd"
 header-img: "img/2016-02-14-penang/bg.jpg"
+category:   travel
+tags:       [malaysia, food, hiking]
 ---
 
 I first came to the state of Penang, Malaysia in April 2014. It was only 3 days, but I still remember that clearly. When I was there, I instantly fell in love with the food, the people, and the culture there. It's a no brainer to go back there again and spend more time. So I did.
