--- a/_posts/2016-03-19-bun-cha.md
+++ b/_posts/2016-03-19-bun-cha.md
@@ -5,6 +5,8 @@ subtitle:   "Let me introduce you to my favorite food so far!"
 date:       2016-03-19 04:12
 author:     "wiseodd"
 header-img: "img/2016-03-19-bun-cha/00.jpg"
+category:   travel
+tags:       [vietnam, food]
 ---
 
 So, here I am again, in Ho Chi Minh City. Do you know what does it mean?
