--- a/_posts/2016-03-24-food-hcmc.md
+++ b/_posts/2016-03-24-food-hcmc.md
@@ -5,6 +5,8 @@ subtitle:   "More than a week in HCMC, I've got enough samples of foods to share
 date:       2016-03-24 10:42
 author:     "wiseodd"
 header-img: "img/2016-03-24-food-hcmc/bg.jpg"
+category:   travel
+tags:       [vietnam, food]
 ---
 
 I've been here, in Ho Chi Minh city, for 9 days, and I plan for more. I found that I really love this city. For me, this is the city that's got the perfect mix and balance. It's a big city, but not too big, everything is cheap, the foods are delicious, the people are amazing, it's realatively clean, the internet is super fast, a lot of coffe shop, it's wonderful!
