--- a/_posts/2016-05-08-diving-kk.md
+++ b/_posts/2016-05-08-diving-kk.md
@@ -5,6 +5,8 @@ subtitle:   "Kota Kinabalu, the capital of Sabah, Malaysia, offers such a great 
 date:       2016-05-08 11:48
 author:     "wiseodd"
 header-img: "img/2016-05-08-diving-kk/bg.jpg"
+category:   travel
+tags:       [malaysia, scuba diving]
 ---
 
 Due to a miscalculation, my business in Indonesia became more complicated than it shoul've been, as time concerned. I didn't factor in the possibility of public holiday back then, let alone *very long* holiday. And suddenly I realized it was Easter weekend. Indonesian got 5 days of holiday! Yay for them, not for me.
