--- a/_posts/2016-06-21-nn-sgd.md
+++ b/_posts/2016-06-21-nn-sgd.md
@@ -4,7 +4,7 @@ title:      "Implementing Minibatch Gradient Descent for Neural Networks"
 subtitle:   "Let's use Python and Numpy to implement Minibatch Gradient Descent algorithm for a simple 3-layers Neural Networks."
 date:       2016-06-21 02:54
 author:     "wiseodd"
-header-img: "img/bayes.png"
+header-img: "img/code.png"
 category:   techblog
 tags:       [machine learning, programming, python, neural networks, optimization]
 ---
