Add dropout picture

--- a/_posts/2016-06-25-dropout.md
+++ b/_posts/2016-06-25-dropout.md
@@ -17,6 +17,8 @@ Enter Dropout.
 
 In training phase, with Dropout, at each hidden layer, with probability `p`, we kill the neuron. What it means by 'kill' is to set the neuron to 0. As neural net is a collection multiplicative operations, then those 0 neuron won't propagate anything to the rest of the network.
 
+![Dropout]({{ site.baseurl }}/img/2016-06-25-dropout/00.png)
+
 Let `n` be the number of neuron in a hidden layer, then the expectation of the number of neuron to be active at each Dropout is `p*n`, as we sample the neurons uniformly with probability `p`. Concretely, if we have 1024 neurons in hidden layer, if we set `p = 0.5`, then we can expect that only half of the neurons (512) would be active at each given time.
 
 Because we force the network to train with only random `p*n` of neurons, then intuitively, we force it to learn the data with different kind of neurons subset. The only way the network could perform the best is to adapt to that constraint, and learn the more general representation of the data.
