--- a/_posts/2016-07-13-ise.md
+++ b/_posts/2016-07-13-ise.md
@@ -15,7 +15,7 @@ When we hear Nagoya, maybe the first thing we think is a boring, industrial city
 
 Have you watch the recent Studio Ghibli's recent movie called [The Wind Rises](https://en.wikipedia.org/wiki/The_Wind_Rises)? If you notice, the main character moved to Nagoya to join Mitsubishi's aircraft company. Yes, Nagoya is the HQ of Mitsubishi's airplane division, and during the war, it's one of the target of the Allied bombing, because of that reason.
 
-However, Aichi, the perfecture Nagoya is part of, is rich with the history. Two of the biggest name of Japanese history is from there: Tokugawa Ieyasu and Nobunaga Oda.
+However, Aichi, the perfecture Nagoya is part of, is rich with histories. Two of the biggest name of Japanese history is from there: Tokugawa Ieyasu and Nobunaga Oda.
 
 <h2 class="section-header">Ise Grand Shrine</h2>
 
@@ -23,7 +23,7 @@ Next to Aichi, there's Mie perfecture. It's home of some of the most interesting
 
 ![Nagoya-Ise]({{ site.baseurl }}/img/2016-07-13-ise/01.jpg)
 
-Ise could be reached easily from Nagoya station using the Rapid Mie train, in about 1.5 hours. Using Japan Rail Pass (JR Pass), this train could be used for free. This train is frequent, depart twice an hour or so.
+Ise could be reached easily from Nagoya station using the Rapid Mie train, in about 1.5 hours. Using Japan Rail Pass (JR Pass), this train could be used for free. This train is frequent, departs twice an hour or so.
 
 ![Nagoya-Ise]({{ site.baseurl }}/img/2016-07-13-ise/02.jpg)
 
@@ -55,7 +55,7 @@ Like many other of Japanese shrine, the main shrine building can't be photograph
 
 ![Nagoya-Ise]({{ site.baseurl }}/img/2016-07-13-ise/10.jpg)
 
-This shrine is not just a shrine though. This is the Ise Grand Shrine, the holiest Shinto shrine of all Japan. It was built to worship the sun godess, Amaterasu, around 2000 years ago. It's no wonder then, why the rules are so strict.
+This shrine is not just an ordinary shrine though. This is the Ise Grand Shrine, the holiest Shinto shrine of all Japan. It was built to worship the sun goddess, Amaterasu, around 2000 years ago. It's no wonder then, why the rules are so strict.
 
 <h2 class="section-header">Meoto Iwa</h2>
 
@@ -75,7 +75,7 @@ Meoto Iwa is also a holy site in Ise. It is said that it's a symbol the relation
 
 ![Nagoya-Ise]({{ site.baseurl }}/img/2016-07-13-ise/18.jpg)
 
-The rocks are "connected" together by a heavy woven rope, to symbolize the connection of the couple. The rope is supposedly very heavy, about a ton. And it is said that the rope is changed several times a year during some ceremonies.
+The rocks are "connected" together by a heavy woven rope, to symbolize the connection of the couple. The rope is supposedly very heavy, weighing about a ton. And it is said that the rope is changed several times a year during some ceremonies.
 
 ![Nagoya-Ise]({{ site.baseurl }}/img/2016-07-13-ise/19.jpg)
 
