--- a/_posts/2016-01-01-2015-year-review.md
+++ b/_posts/2016-01-01-2015-year-review.md
@@ -20,7 +20,7 @@ At the beginning of 2015, I vowed myself these things:
 
 I'll run through those goals one by one.
 
-<h3 class="section-header">Read 25 books</h3>
+<h3 class="section-heading">Read 25 books</h3>
 
 I'm a bookworm. Since 2013, I joined Goodreads Reading Challenge. What I do is basically put a number of book you want to read this year, and commit to it. I found it motivating and challenging.
 
@@ -36,7 +36,7 @@ The second one was when I discovered The Dresden Files series by Jim Butcher. Fr
 
 The last book I read at 2015 was Brandon Sanderson's Alloy of Law. I finished it at the last day of 2015. I finished it nonetheless, and I successfully completed the 2015 Reading Challenge!
 
-<h3 class="section-header">Learn backstroke and butterfly stroke</h3>
+<h3 class="section-heading">Learn backstroke and butterfly stroke</h3>
 
 2014 was the year when I rediscovered my passion for swimming. I swam a lot when I was young and I really like it. However, when I was out of elementary school, I ceased to swim. So, when my friend invited me to swim with him at around September 2014, I was so out of shape. Out of 4 strokes (front crawl, butterfly, backstroke, breaststroke), I mastered 0 (zero, nil, null) of them. I didn't quit though, as I found that swimming was really great back then, so I practiced a lot after that.
 
@@ -48,7 +48,7 @@ In the first half of 2015, I challanged myself the 0to1650 training program. Bas
 
 After I relocated to Yogyakarta, I got an easy access to a great swimming pool in the city. So, since August, I swim regularly 3 times a week there. My workout now consists of 100m warmup, 1000m front crawl, and 100m cooldown. Of course there were ups and downs on that, so that's just the guideline I use at every swimming session.
 
-<h3 class="section-header">Run a sub 30 minutes 5k</h3>
+<h3 class="section-heading">Run a sub 30 minutes 5k</h3>
 
 I started to run at August 2014. Back then, I just tired of being inactive, I want to get fit and feel better. I quickly revised my motivation after a few runs. Now, I run because I like it a lot. Something about running is so liberating. Those pantings, heavy breathings, and sore muscles feel really great. At first, I followed the Couch to 5k program (C25K). After I finished it, I run regularly, 3 times a week, 3-5 km each session. I usually woke up at 4:30 in the morning, and I was out there running at 5.
 
@@ -64,7 +64,7 @@ Overall, here's my running achievements in the first half of 2015. I only show t
 
 ![YearReview]({{ site.baseurl }}/img/2016-01-01-2015-year-review/02.png)
 
-<h3 class="section-header">Learn Mandarin</h3>
+<h3 class="section-heading">Learn Mandarin</h3>
 
 Since I was teenager, I love Chinese literature and history a lot. I love history in general, but I think Chinese history would be my favorite, with World War II at close second. So, when I went to China on my own at the end of 2014, I was so fascinated, awed, and I tried to absorb all of everything there, especially the languange, where I found it beautiful.
 
@@ -72,7 +72,7 @@ Based on that, the only logical move I would do was to learn the language. So, i
 
 This one is a complete failure. In January, I was so eager to learn, only for that eagerness to die down after few days. No excuse, I failed. This year, I will start all over.
 
-<h3 class="section-header">Travel to at least 4 countries</h3>
+<h3 class="section-heading">Travel to at least 4 countries</h3>
 
 In 2014, I was bitten by travel bug. Since then, I suffer a serious case of wanderlust. I want to go. I want to explore the world. In that year, I traveled 4 times: Malaysia, China, Vietnam, and China again. The more I travel, the more I want to travel.
 
@@ -82,7 +82,7 @@ Things were good in the first few months of 2015. I traveled Taiwan in April. Bu
 
 Obviously I failed in this goal. But I'm not disappointed. It's a necessary sacrifice for me to achive my dream in 2016: be a nomad and travel the world.
 
-<h3 class="section-header">Save (a lot of) money</h3>
+<h3 class="section-heading">Save (a lot of) money</h3>
 
 Nope. I don't save money to buy house. I don't save money to raise a family. I don't save money for retirement. Nope. Nope. Nope.
 
@@ -92,7 +92,7 @@ My thought back then was that I need some money to start traveling. I didn't exp
 
 In this department, I'd say that I'm successfully achieve what I targeted. I won't disclose the number though.
 
-<h2 class="section-header">Achievements</h2>
+<h2 class="section-heading">Achievements</h2>
 
 Beside those goals, I've got another things that just happened without planning at the start of the year. Here we go.
 
@@ -106,7 +106,7 @@ Beside those goals, I've got another things that just happened without planning 
 * Driving from Ubud, Bali to Yogyakarta, around 700km, in 24 hours, with only 3 hours of sleep
 
 
-<h2 class="section-header">Verdict</h2>
+<h2 class="section-heading">Verdict</h2>
 
 2015's been an up and down year for me. Sure, there were some hardship and difficulties (who doesn't have any, anyway). However, the ups outweigh the downs. So, 2015 is a good year for me! I improved a lot, I achieved a lot, I progressed a lot. I feel that I'm stronger now to face even harder challenges I will face in 2016.
 
