--- a/_posts/2016-02-14-penang.md
+++ b/_posts/2016-02-14-penang.md
@@ -15,7 +15,7 @@ I was in George Town, Penang for 14 days this time. Found a good and cheap hoste
 
 Let's have a rundown on every aspect of Penang that I like and dislike.
 
-<h2 class="section-header">Foods</h2>
+<h2 class="section-heading">Foods</h2>
 
 Simply amazing. Delicious. Yummy!
 
@@ -39,7 +39,7 @@ Economy Rice for Indonesian people should be familiar. It's a Malaysian version 
 
 Another favorite of mine is Nasi Lemak Daun Pisang. Basically it's a small portion of Nasi Lemak, wrapped with banana leaf. You could find it all over Penang, esp. in Malay and Indian food stall. One of those is just RM 1(!!!). But, to get full, I usually need at least 3 of those.
 
-<h2 class="section-header">Activities</h2>
+<h2 class="section-heading">Activities</h2>
 
 Penang is rather small island, but it doesn't mean that it only has a handful of activities.
 
@@ -63,7 +63,7 @@ The trail is a jungle trail. It's around 6 km one way, give or take. We did it i
 
 When you've arrived at the summit, you could back down by again along the same path, or just take the train. The fare is RM 17, but it's definitely worth it because you've seen so much in your hike
 
-<h2 class="section-header">People</h2>
+<h2 class="section-heading">People</h2>
 
 Day and night to Indonesia. Virtually everyone here can speak English. Even there are some people that make English their first language. I'm really impressed by that.
 
@@ -77,7 +77,7 @@ Also, maybe this is just a confirmation bias. But, all of the travelers I met in
 
 However, I think to get the most from the locals here, I should at least know two languages: Mandarin and Malay. Big plus would be Hokkien and Teochew, as the majority of the Chinese here are either Hokkien or Teochew. Alas, I posses nil of those.
 
-<h2 class="section-header">Not so good thing</h2>
+<h2 class="section-heading">Not so good thing</h2>
 
 The only thing I dislike about George Town is the weather. It's even hotter than Yogyakarta or Jakarta!
 
