--- a/_posts/2016-03-24-food-hcmc.md
+++ b/_posts/2016-03-24-food-hcmc.md
@@ -13,7 +13,7 @@ I've been here, in Ho Chi Minh city, for 9 days, and I plan for more. I found th
 
 Speaking about wonderful things, the foods here are absolutely wonderful. I still think that Vietnamese food is the best I've ever tasted. One of those foods is [Bun Cha]({% post_url 2016-03-19-bun-cha %}). But, not only that, HCMC still has a lot to offer from its food department!
 
-<h2 class="section-header">Pho</h2>
+<h2 class="section-heading">Pho</h2>
 
 ![Pho]({{ site.baseurl }}/img/2016-03-24-food-hcmc/00.jpg)
 
@@ -25,7 +25,7 @@ It comes in several variants, depends on what meats you want to eat. There are P
 
 It's very popular here in Vietnam, and there are countless Pho stalls in HCMC. A bowl of Pho priced for just VND 30,000, just north of $1. It's cheap, it's good, what more could you ask?
 
-<h2 class="section-header">Com Ga</h2>
+<h2 class="section-heading">Com Ga</h2>
 
 ![Com Ga]({{ site.baseurl }}/img/2016-03-24-food-hcmc/01.jpg)
 
@@ -35,7 +35,7 @@ Com Ga is somewhat similar to Chinese style chicken rice. The rice is seasoned a
 
 I paid VND 35,000 ($1.5) for a huge portion of Com Ga.
 
-<h2 class="section-header">Bun Rieu</h2>
+<h2 class="section-heading">Bun Rieu</h2>
 
 ![Bun Rieu]({{ site.baseurl }}/img/2016-03-24-food-hcmc/02.jpg)
 
@@ -45,7 +45,7 @@ First, the base of the dish is the Bun, rice vermicilli noodle. Then, there are 
 
 VND 30,000 was the price for all of those.
 
-<h2 class="section-header">Bun Bo Hue</h2>
+<h2 class="section-heading">Bun Bo Hue</h2>
 
 ![Bun Bo Hue]({{ site.baseurl }}/img/2016-03-24-food-hcmc/03.jpg)
 
@@ -57,7 +57,7 @@ But still, as with the case of Bun Cha, I think the best Bun Bo Hue could be had
 
 It was a bit more expensive than the other noodles, considering the amount of beef used: VND 40,000.
 
-<h2 class="section-header">Hu Tieu</h2>
+<h2 class="section-heading">Hu Tieu</h2>
 
 ![Hu Tieu]({{ site.baseurl }}/img/2016-03-24-food-hcmc/04.jpg)
 
@@ -69,7 +69,7 @@ I had my first Hu Tieu in the middle of District 4 alleyway. So obscure, yet so 
 
 Price? VND 30,000!
 
-<h2 class="section-header">Com Tam Suon Nuong</h2>
+<h2 class="section-heading">Com Tam Suon Nuong</h2>
 
 ![Com Tam]({{ site.baseurl }}/img/2016-03-24-food-hcmc/05.jpg)
 
@@ -79,7 +79,7 @@ One could add anything on top of the Com Tam. In that occasion, I ate the Com Ta
 
 For a plate of Com Tam Suon Nuong, it was VND 35,000.
 
-<h2 class="section-header">More?</h2>
+<h2 class="section-heading">More?</h2>
 
 For now, that's it.
 
