--- a/_posts/2016-06-21-nn-sgd.md
+++ b/_posts/2016-06-21-nn-sgd.md
@@ -13,7 +13,7 @@ It's a public knowledge that Python is the de facto language of Machine Learning
 
 So, let's back to basic and learn how to create a simple 3-layers Neural Networks, and implement Minibatch Gradient Descent  using Numpy.
 
-<h2 class="section-header">Defining the Networks</h2>
+<h2 class="section-heading">Defining the Networks</h2>
 
 First, the dataset. We're going to create toy dataset by using Scikit-Learn `make_moons` function:
 
@@ -93,7 +93,7 @@ def backward(model, xs, hs, errs):
 
 For the backprop, we start from the top (output layer) down to the input layer. We start by propagating the error to get the gradient of weight between hidden layer and output layer, then we compute the gradient of hidden layer using the error gradient. Using hidden layer gradient, we then compute the gradient of weight between input and hidden layer.
 
-<h2 class="section-header">Gradient Descent</h2>
+<h2 class="section-heading">Gradient Descent</h2>
 
 We could use the model already, but it's meaningless as it will yield random result (because of random initialization). So, what we need to do is to train the networks with our dataset.
 
@@ -105,7 +105,7 @@ Now, there are three variants of Gradient Descent: Batch, Stochastic, and Miniba
 * **Stochastic** uses only single data point to propagate the error, which would make the convergence slow, as the variance is big (because Law of Large Numbers doesn't apply).
 * **Minibatch** is combining the best of both worlds. We don't use full dataset but we also don't use single data point either. For example, we're using 50, 100, or 200 random subset of our dataset each time we train the networks. This way, we lower the computation cost, and yet we're still get lower variance than by using the Stochastic version.
 
-<h2 class="section-header">Implementing the Minibatch Gradient Descent</h2>
+<h2 class="section-heading">Implementing the Minibatch Gradient Descent</h2>
 
 Let's apply our algorithm of choice Minibatch Gradient Descent:
 
@@ -180,7 +180,7 @@ What we do here is to iterate every data point in our minibatch, then feed it to
 
 Because this is a Minibatch Gradient Descent algorithm, we then accumulate all the informations of the current minibatch. We use all those informations of the current minibatch to do the backprop, which will yield gradients of the networks' parameters (`W1` and `W2`).
 
-<h2 class="section-header">Testing</h2>
+<h2 class="section-heading">Testing</h2>
 
 Let's test our model and algorithm. We're going to repeat the train-test procedure for 100 times then report the average of the accuracy.
 
@@ -221,7 +221,7 @@ Mean accuracy: 0.8765040000000001, std: 0.0048433442991387705
 
 So, we get about 87% accuracy on average. Not bad at all!
 
-<h2 class="section-header">Conclusion and Future Work</h2>
+<h2 class="section-heading">Conclusion and Future Work</h2>
 
 Here, we showed how to define a simple Neural Networks model from scratch using Numpy. We also defined the forward and backpropagation operations of the networks. We then wrote an algorithm to train the network: Minibatch Gradient Descent. Finally we tested the trained networks using test dataset.
 
