--- a/_posts/2016-06-25-dropout.md
+++ b/_posts/2016-06-25-dropout.md
@@ -62,7 +62,7 @@ h1 *= u1
 
 With that code, we essentially make the expectation of layer output to be `x` instead of `px`, because we scale it back with `1/p`. Hence in the test time, we don't need to do anything as the expected output of the layer is the same.
 
-<h2 class="section-header">Dropout backprop</h2>
+<h2 class="section-heading">Dropout backprop</h2>
 
 During the backprop, what we need to do is just to consider the Dropout. The killed neurons don't contribute anything to the network, so we won't flow the gradient through them.
 
@@ -72,7 +72,7 @@ dh1 *= u1
 
 For full example, please refer to: <https://github.com/wiseodd/hipsternet/blob/master/hipsternet/neuralnet.py>.
 
-<h2 class="section-header">Test and Comparison</h2>
+<h2 class="section-heading">Test and Comparison</h2>
 
 Test time! But first, let's declare what kind of network we will use for testing.
 
@@ -137,7 +137,7 @@ Iter-1000 loss: 0.3182353552441539
 
 This indicates that network without Dropout performs better at the training phase while Dropout network perform worse. The table is turned at the test time, Dropout network is not just perform better, but *consistenly better*. One could interpret this as the sign of overfitting. So, really, we could see that Dropout regularize our network and make it more robust to overfitting.
 
-<h2 class="section-header">Conclusion</h2>
+<h2 class="section-heading">Conclusion</h2>
 
 We look at one of the driving force of the recent advancement of Deep Learning: Dropout. It's a relatively new technique but already made a very big impact in the field. Dropout act as regularizer by stochastically kill neurons in hidden layers. This in turn force the network to generalize more.
 
@@ -147,7 +147,7 @@ We then compare the Dropout network with non Dropout network. The result is nice
 
 To see more about, check my full example in my Github page: <https://github.com/wiseodd/hipsternet>
 
-<h2 class="section-header">References</h2>
+<h2 class="section-heading">References</h2>
 
 * <http://www.cs.toronto.edu/~rsalakhu/papers/srivastava14a.pdf>
 * <http://cs231n.github.io/neural-networks-2/#reg>
