--- a/_posts/2016-07-13-ise.md
+++ b/_posts/2016-07-13-ise.md
@@ -17,7 +17,7 @@ Have you watch the recent Studio Ghibli's recent movie called [The Wind Rises](h
 
 However, Aichi, the perfecture Nagoya is part of, is rich with histories. Two of the biggest name of Japanese history is from there: Tokugawa Ieyasu and Nobunaga Oda.
 
-<h2 class="section-header">Ise Grand Shrine</h2>
+<h2 class="section-heading">Ise Grand Shrine</h2>
 
 Next to Aichi, there's Mie perfecture. It's home of some of the most interesting historical and religious places in Japan. Oh, and also that famous F1 track: Suzuka.
 
@@ -57,7 +57,7 @@ Like many other of Japanese shrine, the main shrine building can't be photograph
 
 This shrine is not just an ordinary shrine though. This is the Ise Grand Shrine, the holiest Shinto shrine of all Japan. It was built to worship the sun goddess, Amaterasu, around 2000 years ago. It's no wonder then, why the rules are so strict.
 
-<h2 class="section-header">Meoto Iwa</h2>
+<h2 class="section-heading">Meoto Iwa</h2>
 
 Couple stations away from Iseshi station, near Futamino Ura station, there's another very interesting site. It's called Meoto Iwa, roughly translated as couple (as in married couple) rocks.
 
