--- a/_posts/2016-09-10-kebab.md
+++ b/_posts/2016-09-10-kebab.md
@@ -15,7 +15,7 @@ Kebab, as people outside the region would think of as the pita bread wrapped mea
 
 So, without further ado, let's dive into the wonderful world of kebab!
 
-<h2 class="section-header">Shish Kebab</h2>
+<h2 class="section-heading">Shish Kebab</h2>
 
 This is what most people think of kebab as. Shish Kebab is a grilled marinated meat in skewer. People from Malaysia and Indonesia know this kind of meat cooking technique as Satay, although Shish Kebab is eaten without any sauce.
 
@@ -29,7 +29,7 @@ The meat used in Shish Kebab, like any other Kebab is lamb. No one will complain
 
 Usually Shish Kebab would be served with one or two calories (e.g. rice, fries), salad, and bread. Though bread is counted as a calory source, everything in Turkey would be served with bread, so I might as well list it in a separate item.
 
-<h2 class="section-header">Iskender Kebab</h2>
+<h2 class="section-heading">Iskender Kebab</h2>
 
 Let's start with a trivia: Iskender is the Turkish name for Alexander.
 
@@ -43,7 +43,7 @@ What makes this kebab special is how the meat is served, not cooked. The meat us
 
 And like Shish Kebab, Iskender Kebab has two variation: lamb and chicken meat. Continuing the pattern, for chicken Iskender Kebab, it would be called Tavuk Iskender.
 
-<h2 class="section-header">Adana Kebab</h2>
+<h2 class="section-heading">Adana Kebab</h2>
 
 This kebab is very similar to Koobideh in Persian Kebabery(?). Lamb or chicken meat minced with a lot of spice, then grilled along with green pepper and tomato. They are then served with bread and raw onion.
 
@@ -51,7 +51,7 @@ This kebab is very similar to Koobideh in Persian Kebabery(?). Lamb or chicken m
 
 The best thing about Adana Kebab is the spice. It takes the grilled meat into the next level.
 
-<h2 class="section-header">Kofte</h2>
+<h2 class="section-heading">Kofte</h2>
 
 Turkish meatball. That's Kofte in one phrase.
 
@@ -63,7 +63,7 @@ This not so round brown meatball can be eaten in many styles: sandwich-like with
 
 Kofte meatball is different than Asian meatball in a way that Kofte doesn't employ any flour at all. So Kofte is a pure meat in round shape.
 
-<h2 class="section-header">Doner Kebab</h2>
+<h2 class="section-heading">Doner Kebab</h2>
 
 This is what most people think of "Doner Kebab". Actually Doner Kebab is just the meat cooking method. Doner literally means to rotate. You know, the rotating thing that has meat attached to it and a grill nearby, that's Doner Kebab.
 
@@ -78,7 +78,7 @@ Now Doner Kebab is very versatile. It can be eaten with almost everything. Howev
 * Pilav Utsu Doner: Doner Kebab meat on top of Pilav.
 
 
-<h2 class="section-header">Bonus: Pilav and Pide</h2>
+<h2 class="section-heading">Bonus: Pilav and Pide</h2>
 
 Pilav is a Middle Eastern dish in which rice is cooked in seasoned broth. The result? Well why, seasoned rice of course. It then could be eaten with anything, just like plain rice in Asia.
 
