Fix internal links

--- a/_posts/2017-01-29-infogan.md
+++ b/_posts/2017-01-29-infogan.md
@@ -9,7 +9,7 @@ category:   techblog
 tags:       [machine learning, gan]
 ---
 
-Generative Adversarial Networks (GAN) is one of the most exciting generative models in recent years. The idea behind it is to learn generative distribution of data through two-player minimax game, i.e. the objective is to find the Nash Equilibrium. For more about the intuition and implementation of GAN, please see my previous post about [GAN]({% post_url 2016-09-17-gan-tensorflow %}) and [CGAN](% post_url 2016-12-24-conditional-gan-tensorflow %).
+Generative Adversarial Networks (GAN) is one of the most exciting generative models in recent years. The idea behind it is to learn generative distribution of data through two-player minimax game, i.e. the objective is to find the Nash Equilibrium. For more about the intuition and implementation of GAN, please see my previous post about [GAN]({% post_url 2016-09-17-gan-tensorflow %}) and [CGAN]({% post_url 2016-12-24-conditional-gan-tensorflow %}).
 
 Note, the TensorFlow and Pytorch code could be found here: <https://github.com/wiseodd/generative-models>.
 
@@ -47,7 +47,7 @@ where \\( V(D, G) \\) is GAN loss.
 
 During training, we provide a prior \\( P(c) \\), which could be any distribution. In fact, we could add as many priors as we want, and InfoGAN might assign different properties to them. The author of InfoGAN called this as "disentangled representations", as it kind of breaking down the properties of data into several conditional parameters.
 
-The training process is similar for discriminator net \\( D(X) \\) and generator net \\( G(z, c) \\) is quite similar to CGAN, which could be read further [here](% post_url 2016-12-24-conditional-gan-tensorflow %). The differences, however, are:
+The training process is similar for discriminator net \\( D(X) \\) and generator net \\( G(z, c) \\) is quite similar to CGAN, which could be read further [here]({% post_url 2016-12-24-conditional-gan-tensorflow %}). The differences, however, are:
 
 * instead of \\( D(X, c) \\), we use discriminator as in vanilla GAN: \\( D(X) \\), i.e. unconditional discriminator,
 * instead of feeding observed data for the \\( c \\), e.g. labels, into \\( G(z, c) \\), we sample \\( c \\) from prior \\( P(c) \\).
@@ -57,7 +57,7 @@ In addition to \\( D(X) \\) and \\( G(z, c) \\), we also train \\( Q(c \vert X) 
 
 <h2 class="section-heading">InfoGAN implementation in TensorFlow</h2>
 
-The implementation for vanilla and conditional GAN could be found here: [GAN]({% post_url 2016-09-17-gan-tensorflow %}), [CGAN](% post_url 2016-12-24-conditional-gan-tensorflow %). We will focus on the additional implementation for InfoGAN in this section.
+The implementation for vanilla and conditional GAN could be found here: [GAN]({% post_url 2016-09-17-gan-tensorflow %}), [CGAN]({% post_url 2016-12-24-conditional-gan-tensorflow %}). We will focus on the additional implementation for InfoGAN in this section.
 
 We will implement InfoGAN for MNIST data, with \\( c \\) categorically distributed, i.e. one-hot vector with ten elements.
 
