Update infogan term

--- a/_posts/2017-01-29-infogan.md
+++ b/_posts/2017-01-29-infogan.md
@@ -98,12 +98,12 @@ Q_c_given_x = Q(G_sample)
 
 during runtime, we will populate \\( c \\) with values from `sample_c()`.
 
-Having all ingredients in hands, we could compute the mutual information term, which is the cross entropy of the prior and our variational distribution, plus the entropy of our prior:
+Having all ingredients in hands, we could compute the mutual information term, which is the conditional entropy of the prior and our variational distribution, plus the entropy of our prior:
 
 ``` python
-cross_ent = tf.reduce_mean(-tf.reduce_sum(tf.log(Q_c_given_x + 1e-8) * c, 1))
+cond_ent = tf.reduce_mean(-tf.reduce_sum(tf.log(Q_c_given_x + 1e-8) * c, 1))
 ent = tf.reduce_mean(-tf.reduce_sum(tf.log(c + 1e-8) * c, 1))
-Q_loss = cross_ent + ent
+Q_loss = cond_ent + ent
 ```
 
 Then, we optimize both \\( G \\) and \\( Q \\), based on that:
